syntax = "proto3";

package workspace_management;

message StartApplicationRequest
{
    optional string application_name = 1;
    optional string instance_name = 2;

    optional string path = 3;
    optional string args = 4;
}

message StartApplicationReply
{
    optional string error = 1;
}

message RunTaskRequest
{
    optional string application_name = 1;
    optional string instance_name = 2;
    optional string task_name = 3;
}

message RunTaskReply
{
    optional string error = 1;
}

service WorkspaceManager
{
    rpc StartApplication (StartApplicationRequest) returns (StartApplicationReply);
    rpc RunTask (RunTaskRequest) returns (RunTaskReply);
}